correction alignement card recette

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,6 +58,20 @@ header {
   }
 }
 
+.listeTag {
+  display: flex;
+  flex-wrap: wrap;
+}
+.listeTag__tag {
+  list-style: none;
+  padding: 8px;
+  background-color: #3282f7;
+  border-radius: 5px;
+  color: white;
+  margin: 0 1em 1em 0;
+  cursor: pointer;
+}
+
 .rechercheTag {
   display: flex;
   justify-content: space-between;
@@ -106,12 +120,6 @@ header {
   font-size: 1.5em;
   width: 15%;
 }
-.rechercheIngredient--etenduActive {
-  width: 50%;
-}
-.rechercheIngredient--etenduInactive {
-  width: 15%;
-}
 
 .rechercheIngredientAside--active {
   position: absolute;
@@ -130,6 +138,7 @@ header {
   width: 31%;
   padding-left: 2%;
   margin: 5px 0 5px 0;
+  cursor: pointer;
 }
 .rechercheIngredientAside--inactive {
   display: none;
@@ -165,12 +174,6 @@ header {
   font-size: 1.5em;
   width: 15%;
 }
-.rechercheAppareil--etenduActive {
-  width: 50%;
-}
-.rechercheAppareil--etenduInactive {
-  width: 15%;
-}
 
 .rechercheAppareilAside--active {
   position: absolute;
@@ -190,6 +193,7 @@ header {
   width: 31%;
   padding-left: 2%;
   margin: 5px 0 5px 0;
+  cursor: pointer;
 }
 .rechercheAppareilAside--inactive {
   display: none;
@@ -225,12 +229,6 @@ header {
   font-size: 1.5em;
   width: 15%;
 }
-.rechercheUstensiles--etenduActive {
-  width: 50%;
-}
-.rechercheUstensiles--etenduInactive {
-  width: 15%;
-}
 
 .rechercheUstensilesAside--active {
   position: absolute;
@@ -250,19 +248,21 @@ header {
   width: 31%;
   padding-left: 2%;
   margin: 5px 0 5px 0;
+  cursor: pointer;
 }
 .rechercheUstensilesAside--inactive {
   display: none;
 }
 
 .listeRecettes {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 2fr);
+  grid-template-rows: 1fr;
+  gap: 1rem;
 }
 
 .recette {
-  margin: 30px 3% 0 0;
-  width: 30%;
+  margin: 30px 0 0 0;
   height: 30em;
   background-color: #e7e7e7;
   border-radius: 5px;
