--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -24,6 +24,19 @@
     }
 }
 
+.listeTag{
+    display: flex;
+    flex-wrap: wrap;
+    &__tag{
+        list-style: none;
+        padding: 8px;
+        background-color: $blue;
+        border-radius: 5px;
+        color: white;
+        margin: 0 1em 1em 0;
+        cursor: pointer;
+    }
+}
 .rechercheTag{
     display: flex;
     justify-content: space-between;
@@ -85,6 +98,7 @@
         width: 31%;
         padding-left: 2%;
         margin: 5px 0 5px 0;
+        cursor: pointer;
     }
     &--inactive{
         display: none;
@@ -139,6 +153,7 @@
         width: 31%;
         padding-left: 2%;
         margin: 5px 0 5px 0;
+        cursor: pointer;
     }
     &--inactive{
         display: none;
@@ -193,6 +208,7 @@
         width: 31%;
         padding-left: 2%;
         margin: 5px 0 5px 0;
+        cursor: pointer;
     }
     &--inactive{
         display: none;
@@ -200,12 +216,13 @@
 }
 
 .listeRecettes{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3,2fr);
+    grid-template-rows:1fr;
+    gap:1rem;
 }
 .recette{
-    margin: 30px 3% 0 0;
-    width: 30%;
+    margin: 30px 0 0 0;
     height: 30em;
     background-color: $lightgray;
     border-radius: 5px;
